--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AL BAIK - Food Delivery Website</title>
     <link rel="stylesheet" href="mini.css">
+    <script src="mini.js"></script>
 </head>
 <body>
 <!-- Header -->    
